Tasks for building and starting spigot with updated plugin